# fila

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  book.toml  install.sh  llms.txt
.claude/commands/: bmad-bmm-epic-pipeline.md  bmad-bmm-epic-review.md  bmad-bmm-execute-epic.md
.github/workflows/: bench-competitive.yml  bench-regression.yml  bleeding-edge.yml  ci.yml  coverage.yml  docs.yml  e2e.yml  release.yml
_bmad-output/: epic-execution-state.yaml  pipeline-state.yaml
_bmad-output/brainstorming/: brainstorming-session-2026-02-09.md  brainstorming-session-2026-03-04.md
_bmad-output/implementation-artifacts/: 1-1-cargo-workspace-protobuf-definitions.md  1-2-ci-cd-pipeline.md  1-3-core-domain-types-storage-layer.md  1-4-broker-core-scheduler-loop.md  1-5-grpc-server-queue-management.md  1-6-message-enqueue.md  1-7-consumer-lease-message-delivery.md  1-8-message-acknowledgment.md  1-9-crash-recovery-graceful-shutdown.md  10-1-release-pipeline-docker.md  10-2-sdk-package-publishing.md  10-3-binary-distribution.md  10-4-core-documentation.md  10-5-tutorials-examples.md  11-1-verify-release-pipeline.md  11-2-package-registry-publishing.md  12-1-benchmark-harness-self-benchmarking.md  12-2-ci-regression-detection.md  12-3-competitive-benchmarks.md  12-4-published-results-benchmark-dashboard.md  13-1-storage-trait-abstraction-rocksdb-adapter.md  13-2-write-path-wal-segment-log.md  13-3-read-path-indexing.md  13-4-background-maintenance-compaction.md  13-5-integration-cutover-validation.md  2-1-deficit-round-robin-scheduler.md  2-2-weighted-fairness-accuracy-verification.md  2-3-nack-message-retry.md  2-4-visibility-timeout-lease-expiry.md  3-1-lua-sandbox-on-enqueue-hook.md  3-2-lua-safety-timeouts-memory-circuit-breaker.md  3-3-on-failure-hook-retry-decisions.md  3-4-dead-letter-queue.md  4-1-token-bucket-implementation.md  4-2-throttle-aware-scheduling.md  4-3-runtime-throttle-rate-management.md  5-1-configuration-listing-operator-visibility.md  5-2-queue-stats-inspection.md  5-3-dlq-redrive.md  5-4-fila-cli.md  (+59 more)
_bmad-output/planning-artifacts/: architecture.md  batch-pipeline-epics.md  epics-phase-1.md  epics.md  implementation-readiness-report-2026-02-11.md  implementation-readiness-report-2026-03-04.md  performance-optimization-epics.md  prd.md  product-brief-fila-2026-02-10.md  (+6 more)
_bmad/bmb/: config.yaml
crates/fila-bench/: Cargo.toml
crates/fila-bench/benches/: system.rs
crates/fila-bench/src/: aggregate.rs  compare.rs  lib.rs  measurement.rs  progress.rs  report.rs  server.rs
crates/fila-bench/src/benchmarks/: batch.rs  compaction.rs  failure_paths.rs  fairness.rs  latency.rs  lua.rs  memory.rs  mod.rs  open_loop.rs  scaling.rs  subsystem.rs  throughput.rs
crates/fila-cli/: Cargo.toml
crates/fila-cli/src/: main.rs
crates/fila-client/: Cargo.toml
crates/fila-client/src/: client.rs  error.rs  lib.rs
crates/fila-client/tests/: integration.rs
crates/fila-core/: Cargo.toml
crates/fila-core/benches/: drr.rs  throttle.rs
crates/fila-core/proptest-regressions/broker/: drr.txt
crates/fila-core/src/: error.rs  lib.rs  message.rs  queue.rs  telemetry.rs
crates/fila-core/src/broker/: auth.rs  command.rs  config.rs  drr.rs  metrics.rs  mod.rs  router.rs  scheduler.rs  shard_router.rs  stats.rs  throttle.rs
crates/fila-core/src/broker/scheduler/: admin_handlers.rs  consumer_groups.rs  delivery.rs  handlers.rs  metrics_recording.rs  mod.rs  recovery.rs
crates/fila-core/src/broker/scheduler/tests/: ack_nack.rs  coalescing.rs  command.rs  common.rs  config.rs  consumer_groups.rs  delivery.rs  dlq.rs  enqueue.rs  fairness.rs  fila_backend.rs  list_queues.rs  lua.rs  mod.rs  recovery.rs  redrive.rs  stats.rs  throttle.rs
crates/fila-core/src/cluster/: binary_service.rs  grpc_service.rs  mod.rs  multi_raft.rs  network.rs  proto_convert.rs  store.rs  tests.rs  types.rs
crates/fila-core/src/fibp/: codec.rs  connection.rs  dispatch.rs  error.rs  listener.rs  mod.rs  wire.rs
crates/fila-core/src/lua/: bridge.rs  helpers.rs  mod.rs  on_enqueue.rs  on_failure.rs  safety.rs  sandbox.rs
crates/fila-core/src/storage/: in_memory.rs  keys.rs  mod.rs  rocksdb.rs  traits.rs
crates/fila-core/src/storage/fila/: compaction.rs  config.rs  mod.rs  wal.rs
crates/fila-core/tests/: lua_spike.rs
crates/fila-e2e/: Cargo.toml
crates/fila-e2e/src/: lib.rs
crates/fila-e2e/tests/: acl.rs  auth.rs  auth_edge_cases.rs  batch_enqueue.rs  cluster.rs  config.rs  crash_recovery.rs  delivery_batching.rs  dlq_redrive.rs  fairness.rs  fibp.rs  lifecycle.rs  lua_hooks.rs  queue_management.rs  throttle.rs  tls.rs  tls_mtls.rs  visibility_timeout.rs
crates/fila-e2e/tests/helpers/: cluster.rs  mod.rs
crates/fila-fibp/: Cargo.toml
crates/fila-fibp/src/: codec.rs  error.rs  error_code.rs  frame.rs  lib.rs  opcode.rs  types.rs  wire.rs
crates/fila-fibp/src/types/: admin.rs  auth.rs  cluster.rs  error.rs  handshake.rs  hotpath.rs  mod.rs
crates/fila-proto/: Cargo.toml  build.rs
crates/fila-proto/proto/fila/v1/: admin.proto  cluster.proto  service.proto
crates/fila-proto/src/: lib.rs
crates/fila-sdk/: Cargo.toml
crates/fila-sdk/examples/: fair_scheduling.rs  throttling.rs
crates/fila-sdk/src/: client.rs  error.rs  fibp_codec.rs  fibp_transport.rs  lib.rs
crates/fila-sdk/tests/: backpressure.rs  fibp_integration.rs  integration.rs  stream_enqueue.rs
crates/fila-server/: Cargo.toml
crates/fila-server/src/: admin_service.rs  auth.rs  binary_handlers.rs  binary_server.rs  error.rs  gui.rs  gui_dashboard.html  lib.rs  main.rs  service.rs  trace_context.rs
crates/fila-server/tests/: binary_protocol.rs
deploy/: docker-compose.cluster.yml  fila.service  fila.toml
docs/: SUMMARY.md  api-reference.md  benchmarks.md  cluster-scaling.md  compatibility.md  concepts.md  configuration.md  deployment.md  integration-patterns.md  introduction.md  lua-patterns.md  profiling.md  protocol.md  sdk-examples.md  sdk-quickstart.md  troubleshooting.md  tutorials.md
scripts/: bench-inmemory-vs-rocksdb.sh  flamegraph.sh  update-benchmarks.sh
(+165 files in other folders)
