[workspace]
members = [
    "crates/fila-proto",
    "crates/fila-core",
    "crates/fila-server",
    "crates/fila-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/faisca/fila"
rust-version = "1.75"

[workspace.dependencies]
# gRPC + Protobuf (versions must match)
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-prost-build = "0.14"

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v7", "serde"] }
bytes = "1"
crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
tracing-opentelemetry = { version = "0.32", features = ["metrics"] }
opentelemetry = { version = "0.31", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "metrics", "rt-tokio", "testing"] }
opentelemetry-otlp = { version = "0.31", features = ["trace", "metrics", "grpc-tonic"] }
toml = "0.8"
rocksdb = "0.24"
mlua = { version = "0.10", features = ["lua54", "vendored"] }

fila-proto = { path = "crates/fila-proto" }
fila-core = { path = "crates/fila-core" }
