[workspace]
members = [
    "crates/fila-proto",
    "crates/fila-core",
    "crates/fila-server",
    "crates/fila-cli",
    "crates/fila-sdk",
    "crates/fila-e2e",
    "crates/fila-bench",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/faiscadev/fila"
homepage = "https://github.com/faiscadev/fila"
rust-version = "1.75"

[workspace.dependencies]
# Protobuf + tonic (used by cluster Raft gRPC and proto code generation)
tonic = { version = "0.14", features = ["tls-ring"] }
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-prost-build = "0.14"

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
bytes = "1"
crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
tracing-opentelemetry = { version = "0.32", features = ["metrics"] }
opentelemetry = { version = "0.31", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "metrics", "rt-tokio", "testing"] }
opentelemetry-otlp = { version = "0.31", features = ["trace", "metrics", "grpc-tonic"] }
toml = "0.8"
rocksdb = "0.24"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
openraft = { version = "0.9", features = ["serde"] }
nonempty = "0.12"
rcgen = "0.12"
sha2 = "0.10"
# String interning for scheduler hot path (pinned to 0.6.x — v0.7.0 has deadlock issue #39)
lasso = { version = "0.6", features = ["multi-threaded"] }

tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
tower = "0.5"
axum = "0.8"
http = "1"
pin-project-lite = "0.2"

fila-proto = { path = "crates/fila-proto", version = "0.1.0" }
fila-core = { path = "crates/fila-core", version = "0.1.0" }
fila-sdk = { path = "crates/fila-sdk", version = "0.1.0" }
