[package]
name = "fila-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "System-level benchmark suite for the Fila message broker"

[dependencies]
fila-sdk = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
sysinfo = "0.34"

[[bin]]
name = "bench-compare"
path = "src/bin/bench-compare.rs"

[[bin]]
name = "bench-aggregate"
path = "src/bin/bench-aggregate.rs"

[[bench]]
name = "system"
harness = false
