[package]
name = "fila-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "System-level benchmark suite for the Fila message broker"

[dependencies]
fila-sdk = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
sysinfo = "0.34"
rdkafka = { version = "0.37", features = ["cmake-build"] }
lapin = "2"
async-nats = "0.39"
futures-util = "0.3"

[[bin]]
name = "bench-compare"
path = "src/bin/bench-compare.rs"

[[bin]]
name = "bench-aggregate"
path = "src/bin/bench-aggregate.rs"

[[bin]]
name = "bench-competitive"
path = "src/bin/bench-competitive.rs"

[[bench]]
name = "system"
harness = false
