[package]
name = "fila-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "System-level benchmark suite for the Fila message broker"

[features]
competitive = ["dep:rdkafka", "dep:lapin", "dep:async-nats", "dep:futures-util"]

[dependencies]
clap = { workspace = true }
fila-sdk = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
inferno = "0.12"
sysinfo = "0.34"
rdkafka = { version = "0.37", features = ["cmake-build"], optional = true }
lapin = { version = "2", optional = true }
async-nats = { version = "0.39", optional = true }
futures-util = { version = "0.3", optional = true }

[[bin]]
name = "bench-compare"
path = "src/bin/bench-compare.rs"

[[bin]]
name = "bench-aggregate"
path = "src/bin/bench-aggregate.rs"

[[bin]]
name = "bench-competitive"
path = "src/bin/bench-competitive.rs"
required-features = ["competitive"]

[[bin]]
name = "profile-workload"
path = "src/bin/profile-workload.rs"

[[bench]]
name = "system"
harness = false
