[package]
name = "fila-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for Fila"
homepage.workspace = true
keywords = ["message-broker", "queue", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "fila"
path = "src/main.rs"

[dependencies]
fila-proto.workspace = true
clap.workspace = true
tokio.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
