[package]
name = "fila-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for Fila"
homepage.workspace = true
keywords = ["message-broker", "queue", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "fila"
path = "src/main.rs"

[dependencies]
fila-fibp.workspace = true
bytes.workspace = true
clap.workspace = true
tokio.workspace = true
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
webpki-roots = "0.26"
