[package]
name = "fila-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Idiomatic Rust client SDK for Fila message broker"

[dependencies]
fila-proto.workspace = true
tonic.workspace = true
tokio-stream.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
fila-proto.workspace = true
tempfile = "3"
