[package]
name = "fila-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core library for Fila: scheduler, storage, domain types"

[dependencies]
fila-proto.workspace = true
thiserror.workspace = true
uuid.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
rocksdb.workspace = true
crossbeam-channel.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "drr"
harness = false
