[package]
name = "fila-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core library for Fila: scheduler, storage, domain types"
publish = false

[dependencies]
fila-proto.workspace = true
fila-fibp.workspace = true
thiserror.workspace = true
uuid.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
rocksdb.workspace = true
crossbeam-channel.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
toml.workspace = true
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time", "net", "fs"] }
mlua.workspace = true
openraft.workspace = true
nonempty.workspace = true
tonic.workspace = true
sha2.workspace = true
prost.workspace = true
prost-types.workspace = true
lasso.workspace = true
tokio-util = { workspace = true }
tokio-stream.workspace = true
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "drr"
harness = false

[[bench]]
name = "throttle"
harness = false
