[package]
name = "fila-fibp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "FIBP wire format codec shared between fila-core (server) and fila-sdk (client)"
homepage.workspace = true
keywords = ["message-broker", "queue", "protocol"]
categories = ["network-programming"]

[dependencies]
bytes.workspace = true
tokio-util = { workspace = true }
thiserror.workspace = true
