[package]
name = "fila-proto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Generated protobuf and gRPC types for Fila"
homepage.workspace = true
keywords = ["message-broker", "queue", "grpc", "protobuf"]
categories = ["network-programming"]
include = ["src/**/*", "proto/**/*", "build.rs", "Cargo.toml", "LICENSE"]

[dependencies]
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
prost-types.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
