[package]
name = "fila-proto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Protocol buffer message definitions for Fila"
homepage.workspace = true
keywords = ["message-broker", "queue", "protobuf"]
categories = ["network-programming"]
include = ["src/**/*", "proto/**/*", "build.rs", "Cargo.toml", "LICENSE"]

[dependencies]
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
prost-types.workspace = true
bytes.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
