[package]
name = "fila-sdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Idiomatic Rust client SDK for Fila message broker"
homepage.workspace = true
keywords = ["message-broker", "queue", "client"]
categories = ["network-programming", "api-bindings"]

[dependencies]
fila-fibp.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "time", "net", "io-util"] }
tokio-stream.workspace = true
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rustls-native-certs = "0.7"
thiserror.workspace = true
bytes.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tempfile = "3"
