[package]
name = "fila-sdk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Idiomatic Rust client SDK for Fila message broker"
homepage.workspace = true
keywords = ["message-broker", "queue", "binary-protocol", "client"]
categories = ["network-programming", "api-bindings"]

[features]
test-internals = []

[dependencies]
fila-fibp.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "sync", "rt", "macros"] }
tokio-stream.workspace = true
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
webpki-roots = "0.26"
tokio-util = "0.7"
bytes.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = "3"
