[package]
name = "fila-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Server binary for Fila message broker"
publish = false

[dependencies]
fila-core.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
rustls.workspace = true

[dev-dependencies]
tempfile = "3"
