[package]
name = "fila-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Binary protocol server for Fila"
publish = false

[dependencies]
fila-core.workspace = true
fila-fibp.workspace = true
tokio.workspace = true
tracing.workspace = true
toml.workspace = true
uuid.workspace = true
bytes.workspace = true
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"

[dev-dependencies]
tempfile = "3"
