[package]
name = "fila-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "gRPC server binary for Fila"
publish = false

[dependencies]
fila-proto.workspace = true
fila-core.workspace = true
fila-fibp.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
tracing.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
toml.workspace = true
uuid.workspace = true
bytes.workspace = true
tower.workspace = true
http.workspace = true
pin-project-lite.workspace = true
futures-core = "0.3"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"

[dev-dependencies]
tempfile = "3"
